# snakat-proxy-android

./: .gitmodules  README.md  build.gradle
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  Java_com_snakat_proxy_ProxyInternal.cpp  proxy.cpp
src/main/cpp/libs/civetweb/: CMakeLists.txt
src/main/cpp/libs/openssl/: CMakeLists.txt
src/main/cpp/libs/rapidjson/: CMakeLists.txt
src/main/cpp/snakat/: CMakeLists.txt
src/main/cpp/snakat/snakat/: Proxy.cpp  Proxy.h
src/main/cpp/snakat/snakat/core/: AutoreleaseObject.cpp  AutoreleaseObject.h  Macros.h  Pool.h  Singleton.h
src/main/cpp/snakat/snakat/data/: UserData.cpp  UserData.h
src/main/cpp/snakat/snakat/handler/: ApiHandler.cpp  ApiHandler.h  EmptyHandler.cpp  EmptyHandler.h  FileHandler.cpp  FileHandler.h  HttpHandler.cpp  HttpHandler.h
src/main/cpp/snakat/snakat/util/: FileUtil.cpp  FileUtil.h  JniUtil.cpp  JniUtil.h  Util-android.cpp  Util.cpp  Util.h
src/main/java/com/snakat/proxy/: Config.java  DownloadListener.java  Executor.java  ManifestService.java  Proxy.java  ProxyInternal.java
src/main/java/com/snakat/proxy/data/: Manifest.java  ManifestList.java
